--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ sysinfo.txt
 Icon?
 ehthumbs.db
 Thumbs.db
+HollowCopy/Logs/shadercompiler-UnityShaderCompiler.exe3.log
+HollowCopy/Logs/shadercompiler-UnityShaderCompiler.exe2.log
+HollowCopy/Logs/shadercompiler-UnityShaderCompiler.exe1.log
+HollowCopy/Logs/AssetImportWorker1.log
+HollowCopy/Logs/AssetImportWorker0.log
