--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,18 @@ sysinfo.txt
 Icon?
 ehthumbs.db
 Thumbs.db
+HollowCopy/Logs/AssetImportWorker0-prev.log
+HollowCopy/Logs/AssetImportWorker0.log
+HollowCopy/Logs/AssetImportWorker1-prev.log
+HollowCopy/Logs/AssetImportWorker1.log
+HollowCopy/Logs/shadercompiler-AssetImportWorker0.log
+HollowCopy/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+HollowCopy/UserSettings/Layouts/default-2022.dwlt
+*.log
+*.dwlt
+*.log
+*.log
+HollowCopy/Logs/AssetImportWorker0.log
+HollowCopy/Logs/AssetImportWorker1.log
+HollowCopy/Logs/shadercompiler-AssetImportWorker0.log
+HollowCopy/Logs/shadercompiler-UnityShaderCompiler.exe0.log
