--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,4 @@ sysinfo.txt
 Icon?
 ehthumbs.db
 Thumbs.db
-HollowCopy/Logs/shadercompiler-UnityShaderCompiler.exe0.log
-/HollowCopy/Logs
+HollowCopy/Logs
